// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly with caption 1`] = `
<div
  className="typography_b59898fd6b secondary_8c8b98f792 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e title"
  data-testid="menu-title"
>
  <label
    className="titleCaption titleCaptionBottom"
    data-testid="menu-title-caption"
  >
    my title
  </label>
</div>
`;

exports[`renders correctly with custom class name 1`] = `
<div
  className="typography_b59898fd6b secondary_8c8b98f792 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e title dummy-class-name"
  data-testid="menu-title"
/>
`;

exports[`renders correctly with empty props 1`] = `
<div
  className="typography_b59898fd6b secondary_8c8b98f792 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e title"
  data-testid="menu-title"
/>
`;
